--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Fix vite permissions (if needed)
+        run: chmod +x ./node_modules/.bin/vite
+
       - name: Build project
         run: npx vite build
 
