leuk bounce fx op quote, tests voor AllQuotes, yml: run test toegevoegd x :q

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Build project
         run: npx vite build
 
+      - name: Run tests
+        run: npm run test
+
       - name: Commit and push docs folder
         run: |
           git config --global user.name "github-actions[bot]"
