extra check of vitests executable is

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Ensure vitest is executable
+        run: chmod +x ./node_modules/.bin/vitest
+
       - name: Run tests
         run: npm run test -- --run
         # --run voorkomt interactive mode in CI
